--- a/Dropzone/Landing/Landing.css
+++ b/Dropzone/Landing/Landing.css
@@ -8,9 +8,10 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  background-color: #F5F5F5;
+  background-color: #FFF;
   position: relative;
   cursor: pointer;
+  border: 2px dashed rgb(209 209 209);
 }
 
 .dropzone-wrapper {
