--- a/Dropzone/Landing/Landing.css
+++ b/Dropzone/Landing/Landing.css
@@ -8,10 +8,10 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
-  background-color: #FFF;
+  background-color: #f5f5f5;
   position: relative;
   cursor: pointer;
-  border: 2px dashed rgb(209 209 209);
+  border: 1px solid rgb(201 201 201);
 }
 
 .dropzone-wrapper {
@@ -39,7 +39,7 @@
   align-items: center;
   text-align: center;
   background-color: white;
-  border: 1px solid #E1DFDD;
+  border: 1px solid #e1dfdd;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: initial;
@@ -52,7 +52,7 @@
 
 .file-box p {
   font-size: 13px;
-  color: #605E5C;
+  color: #605e5c;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
@@ -65,8 +65,8 @@ p.file-size {
   margin-bottom: 6px;
 }
 
-.file-image{
-  width:50%;
+.file-image {
+  width: 50%;
 }
 
 .file-box {
@@ -89,13 +89,7 @@ p.file-size {
 }
 
 .file-box.selected {
-  border: 2px;
-  border-color: #0078d4;
   background: aliceblue;
-}
-
-.file-box:hover{
-  border-color: #7f97ac;
 }
 
 .ribbon-dropzone-wrapper {
@@ -133,4 +127,19 @@ p.file-size {
 
 .easeOut {
   animation: easeOutToBottom 0.5s ease forwards;
+}
+
+.wideRibbon {
+  width: 100%;
+}
+
+.selectedFilesBox {
+  position: absolute;
+  right: 0;
+  bottom: 5px;
+}
+.spinner-box {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
