--- a/Dropzone/css/Dropzone.css
+++ b/Dropzone/css/Dropzone.css
@@ -155,3 +155,9 @@ p.file-size {
   flex-direction: column;
   justify-content: center;
 }
+
+.remove-button {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+}
